--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone v2 da tela de apresentação HBO </title>
     <link rel="stylesheet" href="estilos/style.css">
 </head>
+
 <body>
     <nav>
         <img src="imgs/hbo-max-h-w-l.svg" alt="Logo">
@@ -14,5 +16,39 @@
             <a href="#" class="botão">ASSINE AGORA</a>
         </div>
     </nav>
+
+    <div id="container">
+        <section id="rm">
+            <div id="fundo">
+                <img src="imgs/RickAndMorty7_Takeover_mobile_alt_keyart.avif" alt="fundo">
+                <div id="logo">
+                    <img src="imgs/rick_and_morty_tt.avif" alt="logo">
+                </div>
+            </div>
+            <div id="textos">
+                <div id="hadline">
+                    <p>Na HBO Max, você tem tudo. <br> E muito mais.</p>
+                </div>
+                <div id="planos">
+                    <div>
+                        <p>Pagamento <br> Mensal</p>
+                        <p>R$34,90</p>
+                    </div>
+                    <div>
+                        <p>Pagamento <br> Anual</p>
+                        <p>R$239,90/ano*</p>
+                        <p>Economize R$178,90</p>
+                    </div>
+                </div>
+                <div id="cta">
+                    <a href="#">ASSINE AGORA</a>
+                    <p>*Necessário pagamento antecipado. Economia baseada no preço do plano multitelas anual comparado
+                        ao preço do plano multitelas mensal durante 12 meses, excluindo impostos. Termos se aplicam.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
