--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
 
     <div id="container">
         <section id="rm">
-            <div id="fundo">
-                <img src="imgs/RickAndMorty7_Takeover_mobile_alt_keyart.avif" alt="fundo">
-                <div id="logo">
-                    <img src="imgs/rick_and_morty_tt.avif" alt="logo">
-                </div>
+            <div id="foto">
+                <img src="imgs/rick_and_morty_tt.avif" alt="logo">
             </div>
             <div id="textos">
                 <div id="hadline">
@@ -48,6 +45,7 @@
                 </div>
             </div>
         </section>
+
     </div>
 </body>
 
