Estilização dos planos

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                     <p>Na HBO Max, você tem tudo. <br> E muito mais.</p>
                 </div>
                 <div id="planos">
-                    <div>
+                    <div id="pm">
                         <p>Pagamento <br> Mensal</p>
-                        <p>R$34,90</p>
+                        <p id="preco1">R$34,90/mês</p>
                     </div>
-                    <div>
-                        <p>Pagamento <br> Anual</p>
-                        <p>R$239,90/ano*</p>
-                        <p>Economize R$178,90</p>
+                    <div id="pa">
+                        <p id="pay">Pagamento <br> Anual</p>
+                        <p id="preco2">R$239,90/ano*</p>
+                        <p id="economia">Economize R$178,90</p>
                     </div>
                 </div>
                 <div id="cta">
