--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <img src="imgs/hbo-max-h-w-l.svg" alt="Logo">
         <div>
             <a href="#">ENTRAR</a>
-            <a href="#" class="botão">ASSINE AGORA</a>
+            <a href="#" class="botao">ASSINE AGORA</a>
         </div>
     </nav>
 
     <div id="container">
         <section id="rm">
             <div id="foto">
-                <img src="imgs/rick_and_morty_tt.avif" alt="logo">
+                <img src="https://hbomax-images.warnermediacdn.com/2023-10/rick_and_morty_tt.png?host=wme-hbomax-drupal-prod.s3.amazonaws.com&w=939" alt="logo">
             </div>
             <div id="textos">
                 <div id="hadline">
